--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,31 @@ environment:
 dependencies:
   chips_choice: ^3.0.1
   clipboard: ^0.1.3
+  dartz: ^0.10.1
+  envied: ^1.0.0
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   flutter_dotenv: ^5.2.1
+  flutter_screenutil: ^5.9.3
+  freezed_annotation: ^2.4.4
   get_it: ^8.0.2
+  go_router: ^14.6.2
   google_generative_ai: ^0.4.6
+  injectable: ^2.5.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
+  build_runner: ^2.4.14
+  envied_generator: ^1.0.0
+  flappy_translator: ^2.1.0
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.5.7
+  injectable_generator: ^2.6.2
+  json_serializable: ^6.9.0
 
 flutter:
   uses-material-design: true
